--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,10 @@
 fastapi==0.95.0
 uvicorn==0.21.1
 python-dotenv==1.0.0
+flask==2.0.1
+werkzeug==2.0.1
+flask-cors==3.0.10
 openai==0.27.0
-requests==2.28.2
-pydantic==1.10.7
+faiss-cpu==1.7.3
+numpy==1.24.3
+python-dotenv==1.0.0
