--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,98 +1,30 @@
-aiohappyeyeballs==2.4.4
-aiohttp==3.10.11
-aiosignal==1.3.1
-anyio==4.5.2
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733175639022/work
-async-timeout==5.0.1
-attrs==25.3.0
-backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
-blinker==1.8.2
-certifi==2025.4.26
-cffi==1.17.1
-charset-normalizer==3.4.2
-click==8.1.8
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
-cryptography==44.0.3
-debugpy @ file:///D:/bld/debugpy_1722923915790/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-exceptiongroup==1.2.2
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1725214404607/work
+# Add these lines at the top of your requirements.txt
+--extra-index-url https://download.pytorch.org/whl/cpu
+
+# Replace your PyTorch entry with one of these options (choose one)
+torch==2.1.1+cpu
+torchvision==0.16.1+cpu
+
+# Or try a different available version like:
+# torch==1.9.0+cpu
+# torch==2.0.1+cpu
 faiss-cpu==1.7.3
 fastapi==0.95.0
-filelock @ file:///C:/b/abs_f2gie28u58/croot/filelock_1700591233643/work
 Flask==2.0.1
 Flask-Cors==3.0.10
-frozenlist==1.5.0
-fsspec==2025.3.0
-gmpy2 @ file:///C:/ci/gmpy2_1645456279018/work
-h11==0.16.0
 huggingface-hub==0.30.2
-idna==3.10
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1726082825846/work
-iniconfig==2.1.0
-ipykernel @ file:///D:/bld/ipykernel_1719845595208/work
-ipython @ file:///D:/bld/ipython_1683289169355/work
-itsdangerous==2.2.0
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
-Jinja2 @ file:///C:/b/abs_92fccttino/croot/jinja2_1716993447201/work
-joblib==1.4.2
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1726610684920/work
-jupyter_core @ file:///D:/bld/jupyter_core_1727163532151/work
 jwt==1.3.1
-MarkupSafe @ file:///C:/b/abs_ecfdqh67b_/croot/markupsafe_1704206030535/work
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
-mpmath @ file:///C:/b/abs_7833jrbiox/croot/mpmath_1690848321154/work
-multidict==6.1.0
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
-networkx @ file:///C:/b/abs_e6gi1go5op/croot/networkx_1690562046966/work
-nltk==3.9.1
 numpy==1.24.3
 openai==0.27.0
-packaging @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_packaging_1745345660/work
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-pillow==10.4.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1726613481435/work
-pluggy==1.5.0
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1727341649933/work
-propcache==0.2.0
-psutil @ file:///D:/bld/psutil_1719274704414/work
-pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1721585709575/work
 pycparser==2.22
-pydantic==1.10.22
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
-pytest==8.3.5
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
 python-dotenv==1.0.0
-pywin32==306
-PyYAML @ file:///C:/b/abs_14xkfs39bx/croot/pyyaml_1728657968772/work
-pyzmq @ file:///D:/bld/pyzmq_1724399214825/work
 regex==2024.11.6
 requests==2.32.3
-safetensors==0.5.3
 scikit-learn==1.2.2
 scipy==1.10.1
 sentence-transformers==2.2.2
-sentencepiece==0.2.0
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
-sniffio==1.3.1
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
-starlette==0.26.1
-sympy @ file:///C:/b/abs_4ay0cgwu2w/croot/sympy_1734629241647/work
-threadpoolctl==3.5.0
 tokenizers==0.20.3
-tomli==2.2.1
-torch==2.4.1
-torchvision==0.19.1
-tornado @ file:///D:/bld/tornado_1717722870081/work
-tqdm==4.67.1
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
 transformers==4.46.3
-typing_extensions @ file:///C:/b/abs_0as9mdbkfl/croot/typing_extensions_1715268906610/work
-urllib3==2.2.3
 uvicorn==0.21.1
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
 Werkzeug==2.0.1
-yarl==1.15.2
-zipp==3.20.2
+gunicorn
